src/objects/OCIO_OGC_Case_Tracking__c.object
<CustomObject>
    <description>Case Tracking application for the Office of General Counsel.</description>
    <fields>
        <fullName>Account_OGC_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OGC Case Trackings</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affected_Fund__c</fullName>
        <inlineHelpText>If using Other GSA Funds, indicate the specific fund in the description field.</inlineHelpText>
        <label>Affected Fund</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition Services Fund</fullName>
                </value>
                <value>
                    <fullName>Energy Efficient Vehicles - ARRA (401)</fullName>
                </value>
                <value>
                    <fullName>Excess and Surplus Real and Related Personal Property Holding Account Fund (000X)</fullName>
                </value>
                <value>
                    <fullName>Federal Buildings Fund (192)</fullName>
                </value>
                <value>
                    <fullName>Federal Buildings Fund - ARRA (442)</fullName>
                </value>
                <value>
                    <fullName>Federal Citizens Services Fund (105)</fullName>
                </value>
                <value>
                    <fullName>Office of Governmentwide Policy (151)</fullName>
                </value>
                <value>
                    <fullName>Operating Expenses - Property Disposal (142)</fullName>
                </value>
                <value>
                    <fullName>Presidential Transition Expenses (108)</fullName>
                </value>
                <value>
                    <fullName>Working Capital Fund (262)</fullName>
                </value>
                <value>
                    <fullName>Other GSA Funds</fullName>
                </value>
                <value>
                    <fullName>Other Federal Agency</fullName>
                </value>
                <value>
                    <fullName>Office of Inspector General (120)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affirmative_Claim_Amount__c</fullName>
        <label>Affirmative Claim Amount</label>
        <summarizedField>OCIO_OGC_Case_History_Data__c.Affirmative_Claim_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>OCIO_OGC_Case_History_Data__c.Include_in_Affirmative_Claim__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OCIO_OGC_Case_History_Data__c.OGC_Matter_Title_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Budget_Activity__c</fullName>
        <label>Budget Activity</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_History_Data__c</fullName>
        <description>Number of OGC Case History Data records for one OGC Case Tracking record.</description>
        <label>Case History Data</label>
        <summaryForeignKey>OCIO_OGC_Case_History_Data__c.OGC_Matter_Title_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Case_Type_OGC_Case_Tracking__c</fullName>
        <label>Matter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APA/OFPP/Declaratory Relief</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>CDA</fullName>
                </value>
                <value>
                    <fullName>Condemnation</fullName>
                </value>
                <value>
                    <fullName>Inverse Condemnation</fullName>
                </value>
                <value>
                    <fullName>EEO</fullName>
                </value>
                <value>
                    <fullName>EEO (Mixed)</fullName>
                </value>
                <value>
                    <fullName>Employment</fullName>
                </value>
                <value>
                    <fullName>Employment/WPA</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>False Claims/Fraud</fullName>
                </value>
                <value>
                    <fullName>FOIA</fullName>
                </value>
                <value>
                    <fullName>FTCA</fullName>
                </value>
                <value>
                    <fullName>Individual Grievance</fullName>
                </value>
                <value>
                    <fullName>Institutional Grievance</fullName>
                </value>
                <value>
                    <fullName>Non-Litigation Matter</fullName>
                </value>
                <value>
                    <fullName>Protest</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Unfair Labor Practice</fullName>
                </value>
                <value>
                    <fullName>Utility Regulation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public Buildings Service</fullName>
                </value>
                <value>
                    <fullName>Federal Acquisition Service</fullName>
                </value>
                <value>
                    <fullName>Office of Chief of Administrative Services Officer</fullName>
                </value>
                <value>
                    <fullName>Office of Citizen Services and Innovative Technologies</fullName>
                </value>
                <value>
                    <fullName>Office of Civil Rights</fullName>
                </value>
                <value>
                    <fullName>Office of Communications and Marketing</fullName>
                </value>
                <value>
                    <fullName>Office of Congressional and Intergovernmental Affairs</fullName>
                </value>
                <value>
                    <fullName>Office of Emergency Response and Recovery</fullName>
                </value>
                <value>
                    <fullName>Office of Governmentwide Policy</fullName>
                </value>
                <value>
                    <fullName>Office of Small Business Utilization</fullName>
                </value>
                <value>
                    <fullName>Office of the Administrator</fullName>
                </value>
                <value>
                    <fullName>Office of the Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>Office of the Chief People Officer</fullName>
                </value>
                <value>
                    <fullName>Office of the General Counsel</fullName>
                </value>
                <value>
                    <fullName>Office the Chief Information Officer</fullName>
                </value>
                <value>
                    <fullName>Other Agency</fullName>
                </value>
                <value>
                    <fullName>Technology Transformation Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Case_History_Data__c</fullName>
        <description>Number of OGC Case History Data records closed for a parent OGC Case Tracking record.</description>
        <label>Closed Case History Data</label>
        <summaryFilterItems>
            <field>OCIO_OGC_Case_History_Data__c.Date_Closed_Case_History_Data__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>OCIO_OGC_Case_History_Data__c.OGC_Matter_Title_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contract_Category__c</fullName>
        <label>Contract Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Architect/Engineer</fullName>
                </value>
                <value>
                    <fullName>Construction (New)</fullName>
                </value>
                <value>
                    <fullName>Construction (R&amp;A)</fullName>
                </value>
                <value>
                    <fullName>Information Technology (Supply/Service)</fullName>
                </value>
                <value>
                    <fullName>Lease (Personal Property)</fullName>
                </value>
                <value>
                    <fullName>Lease (Real Property)</fullName>
                </value>
                <value>
                    <fullName>Real Property Acquisition</fullName>
                </value>
                <value>
                    <fullName>Sale (Personal Property)</fullName>
                </value>
                <value>
                    <fullName>Sale (Real Property)</fullName>
                </value>
                <value>
                    <fullName>Services (Non-IT/Real Prop)</fullName>
                </value>
                <value>
                    <fullName>Service (Real Property)</fullName>
                </value>
                <value>
                    <fullName>Supply (Non-IT)</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Travel/Transportation</fullName>
                </value>
                <value>
                    <fullName>Utilities (Non-Telecom)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corrective_Action_Protest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corrective Action (Protest)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <label>Current Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Filed__c</fullName>
        <label>Date Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_OGC_Case__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Est_Just_Compensation_Condemnation__c</fullName>
        <label>Est. Just Compensation (Condemnation)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Attorney_Fees__c</fullName>
        <label>Estimated Attorney Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Claim_Amount_Rollup__c</fullName>
        <label>Total Claim Amount</label>
        <summarizedField>OCIO_OGC_Case_History_Data__c.Claim_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>OCIO_OGC_Case_History_Data__c.Include_in_Total_Amount_Claimed__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>OCIO_OGC_Case_History_Data__c.OGC_Matter_Title_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Estimated_Claim_Amount__c</fullName>
        <label>Estimated Claim Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_High__c</fullName>
        <label>Estimated High</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Loss_Amount_Rollup__c</fullName>
        <label>Final Loss Amount</label>
        <summarizedField>OCIO_OGC_Case_History_Data__c.Loss_Amount__c</summarizedField>
        <summaryForeignKey>OCIO_OGC_Case_History_Data__c.OGC_Matter_Title_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Estimated_Low__c</fullName>
        <label>Estimated Low</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Interest_Amount__c</fullName>
        <label>Estimated Total Interest Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FTCA_Case__c</fullName>
        <label>FTCA Claim Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Case_Type_OGC_Case_Tracking__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Motor Vehicle</fullName>
                </value>
                <value>
                    <fullName>Premises Liability</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_ID__c</fullName>
        <label>File ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Loss_Amount__c</fullName>
        <label>Estimated Loss Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Recovery_Amount_Rollup__c</fullName>
        <label>Final Recovery Amount</label>
        <summarizedField>OCIO_OGC_Case_History_Data__c.Recovery_Amount__c</summarizedField>
        <summaryForeignKey>OCIO_OGC_Case_History_Data__c.OGC_Matter_Title_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Interest_Start_Date__c</fullName>
        <label>Interest Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Link_to_Matter_File__c</fullName>
        <label>Link to Matter File</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Loss_Contigency_Characterization__c</fullName>
        <label>Loss Contingency Characterization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Probable</fullName>
                </value>
                <value>
                    <fullName>Reasonably Possible</fullName>
                </value>
                <value>
                    <fullName>Remote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Management_Response__c</fullName>
        <label>Management Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attempt Settlement</fullName>
                </value>
                <value>
                    <fullName>Defend Vigorously</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Matter_ID__c</fullName>
        <label>Matter ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRE_Estimated_Loss__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NRE- Loss cannot be reasonably estimated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_Other_Federal_Agency_Li__c</fullName>
        <label>Name of Other Federal Agency Liable</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Claim_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Claim Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Originating_Region__c</fullName>
        <label>Originating Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>NCR</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <description>Payment Date field</description>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Personnel_Case_Type__c</fullName>
        <label>Personnel Matter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EEO</fullName>
                </value>
                <value>
                    <fullName>EEO (Mixed)</fullName>
                </value>
                <value>
                    <fullName>Employment/ WPA</fullName>
                </value>
                <value>
                    <fullName>Individual Grievance</fullName>
                </value>
                <value>
                    <fullName>Institutional Grievance</fullName>
                </value>
                <value>
                    <fullName>Non-Litigation Matter</fullName>
                </value>
                <value>
                    <fullName>Unfair Labor Practice</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Civil Rights</fullName>
                </value>
                <value>
                    <fullName>Civil Rights (Mixed)</fullName>
                </value>
                <value>
                    <fullName>Employment</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Procurement_Amount__c</fullName>
        <inlineHelpText>Use estimated value, if actual is unknown.</inlineHelpText>
        <label>Procurement Amount (Protest)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <label>Project Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reimbursable_Judgment_Fund__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If GSA will have to reimburse the Judgment Fund, check this box.</inlineHelpText>
        <label>Reimbursable Judgment Fund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remarks_OGC_Case__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Schedule_Purchase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule Purchase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_OGC_Case__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To_be_paid_by_Judgment_Fund__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To be Paid by Judgment Fund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Potential_Claims__c</fullName>
        <description>Per task #18180 - OK to delete after 1/15/16 if not issues arise</description>
        <formula>Estimated_Claim_Amount_Rollup__c  +  Estimated_Total_Interest_Amount__c  +  Estimated_Attorney_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Estimated Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Open_Claims_Exposure__c</fullName>
        <formula>Total_Open_Estimated_Attorney_Fees__c + Total_Open_Estimated_Interest_Amount__c + Total_Open_Claims__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Open Claims Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Open_Claims__c</fullName>
        <label>Total Open Claims</label>
        <summarizedField>OCIO_OGC_Case_History_Data__c.Claim_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>OCIO_OGC_Case_History_Data__c.Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OCIO_OGC_Case_History_Data__c.Include_in_Total_Amount_Claimed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OCIO_OGC_Case_History_Data__c.OGC_Matter_Title_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Open_Estimated_Attorney_Fees__c</fullName>
        <label>Total Open Est. Attorney Fees</label>
        <summarizedField>OCIO_OGC_Case_History_Data__c.Estimated_Attorney_Fees__c</summarizedField>
        <summaryFilterItems>
            <field>OCIO_OGC_Case_History_Data__c.Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OCIO_OGC_Case_History_Data__c.Include_in_Total_Amount_Claimed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OCIO_OGC_Case_History_Data__c.OGC_Matter_Title_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Open_Estimated_Interest_Amount__c</fullName>
        <label>Total Open Est. Interest Amount</label>
        <summarizedField>OCIO_OGC_Case_History_Data__c.Estimated_Total_Interest_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>OCIO_OGC_Case_History_Data__c.Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OCIO_OGC_Case_History_Data__c.Include_in_Total_Amount_Claimed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OCIO_OGC_Case_History_Data__c.OGC_Matter_Title_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>OGC Case Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case_Type_OGC_Case_Tracking__c</columns>
        <columns>Client__c</columns>
        <columns>Status_OGC_Case__c</columns>
        <columns>Originating_Region__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Matter</fullName>
        <columns>NAME</columns>
        <columns>Case_Type_OGC_Case_Tracking__c</columns>
        <columns>Client__c</columns>
        <columns>Status_OGC_Case__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_OGC_Case__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed Matter</label>
    </listViews>
    <listViews>
        <fullName>All_Non_Personnel_Matter</fullName>
        <columns>NAME</columns>
        <columns>Account_OGC_Case__c</columns>
        <columns>File_ID__c</columns>
        <columns>Case_Type_OGC_Case_Tracking__c</columns>
        <columns>Originating_Region__c</columns>
        <columns>Status_OGC_Case__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OCIO_OGC_Case_Tracking__c.OGC_Case_Non_Personnel_Case</value>
        </filters>
        <label>All Non-Personnel Matter</label>
        <sharedTo>
            <group>OGC_Case_Tracking_Non_Pers_Cases_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_CO_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_CO_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_NCR_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_NCR_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg10_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg10_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg1_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg1_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg2_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg2_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg3_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg3_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg4_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg4_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg5_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg5_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg6_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg6_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg7_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg7_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg8_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg8_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg9_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg9_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Matter</fullName>
        <columns>NAME</columns>
        <columns>Case_Type_OGC_Case_Tracking__c</columns>
        <columns>Client__c</columns>
        <columns>Status_OGC_Case__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_OGC_Case__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open Matter</label>
    </listViews>
    <listViews>
        <fullName>All_Personnel_Matter</fullName>
        <columns>NAME</columns>
        <columns>Personnel_Case_Type__c</columns>
        <columns>Account_OGC_Case__c</columns>
        <columns>Status_OGC_Case__c</columns>
        <columns>Originating_Region__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OCIO_OGC_Case_Tracking__c.OGC_Case_Personnel_Case</value>
        </filters>
        <label>All Personnel Matter</label>
        <sharedTo>
            <group>OGC_Case_Tracking_Pers_Cases_CO_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_CO_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_NCR_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_NCR_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg10_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg10_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg1_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg1_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg2_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg2_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg3_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg3_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg4_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg4_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg5_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg5_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg6_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg6_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg7_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg7_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg8_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg8_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg9_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg9_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Region_10_Matter</fullName>
        <columns>NAME</columns>
        <columns>Account_OGC_Case__c</columns>
        <columns>Client__c</columns>
        <columns>Case_Type_OGC_Case_Tracking__c</columns>
        <columns>Personnel_Case_Type__c</columns>
        <columns>Status_OGC_Case__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Originating_Region__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Originating_Region__c</field>
            <operation>equals</operation>
            <value>10</value>
        </filters>
        <label>All Region 10 Matter</label>
        <sharedTo>
            <group>OGC_Case_Tracking_Non_Pers_Cases_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_CO_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_CO_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_NCR_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_NCR_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg10_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg10_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg1_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg1_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg2_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg2_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg3_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg3_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg4_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg4_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg5_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg5_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg6_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg6_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg7_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg7_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg8_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg8_Users</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg9_Mgrs</group>
            <group>OGC_Case_Tracking_Pers_Cases_Reg9_Users</group>
        </sharedTo>
    </listViews>
</CustomObject>